# puzzup

./: LICENSE  README.md  manage.py  pyproject.toml  requirements.in  tasks.py
puzzle_editing/: admin.py  discord_integration.py  git.py  google_integration.py  graph.py  messaging.py  middleware.py  models.py  slashcommands.py  status.py  tests.py  urls.py  utils.py  view_helpers.py  views.py
puzzle_editing/api/: serializers.py
puzzle_editing/discord/: __init__.py  cache.py  channel.py  client.py  perm.py
puzzle_editing/fixtures/: auth.yaml  groups.yaml
puzzle_editing/migrations/: 0001_initial.py  0002_mh2023_changes.py
puzzle_editing/templates/: _editor_list.html  account.html  all_answers.html  allrounds.html  base.html  bystatus.html  docs.html  edit_pseudo_answer.html  editor_overview.html  export.html  factcheck.html  flavor.html  index.html  index_not_logged_in.html  my_spoiled.html  process.html  process_not_logged_in.html  puzzle.html  puzzle_answers.html  puzzle_hints.html  puzzle_people.html  puzzle_postprod.html  puzzle_tags.html  puzzle_testsolves_all.html  puzzle_unspoiled.html  random_answers.html  rounds.html  support_all.html  support_for_puzzle.html  support_view.html  testsolve_feedback.html  testsolve_finder.html  testsolve_finish.html  testsolve_main.html  testsolve_one.html  timezone.html  user.html  users.html  users_statuses.html
puzzle_editing/templatetags/: answer.py  avatar_list.py  comment_list.py  name_list.py  perm_tags.py  puzzle_list.py  testsolve_session_list.py  (+1 more)
puzzup/: wsgi.py
settings/: base.py  dev.py  prod.py  staging.py
(+30 files in other folders)
